Reorganizacja notebook workshop - small clear cells
- Podzielono duże komórki na małe, logiczne kroki (one step per cell)
- Przeniesiono print statements do markdown cells jako tekst opisowy
- Dodano blanki (____) dla uczniów do uzupełnienia w formatach typu .format('____')
- Zaktualizowano nazwy kolumn i tabel zgodnie z rzeczywistym dataset
- Zreorganizowano workshop notebooks zgodnie z zasadą small, clear cells:
  * 01_workspace_data_exploration_workshop.ipynb
  * 02_transformations_cleaning_workshop.ipynb
  * 03_views_basic_jobs_workshop.ipynb
  * 02_end_to_end_bronze_silver_gold_workshop.ipynb (częściowo)
- Dodano markdown explanations po każdej komórce kodu
- Usunięto nieużywane pliki i zreorganizowano strukturę warsztatów

--- a/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
@@ -184,6 +184,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wyświetl kontekst użytkownika (zmienne z 00_setup)\n",
+    "print(\"=== Kontekst użytkownika ===\")\n",
+    "print(f\"Katalog: {CATALOG}\")\n",
+    "print(f\"Schema Bronze: {BRONZE_SCHEMA}\")\n",
+    "print(f\"Schema Silver: {SILVER_SCHEMA}\")\n",
+    "print(f\"Schema Gold: {GOLD_SCHEMA}\")\n",
+    "print(f\"Użytkownik: {raw_user}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ustaw katalog jako domyślny\n",
+    "spark.sql(f\"USE CATALOG {CATALOG}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -386,6 +411,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hierarchia Unity Catalog:**\n",
+    "\n",
+    "```\n",
+    "Metastore\n",
+    "  ├── Catalog (np. main, dev, prod)\n",
+    "  │   ├── Schema/Database (np. bronze, silver, gold)\n",
+    "  │   │   ├── Tables (Delta Tables)\n",
+    "  │   │   ├── Views (SQL Views)\n",
+    "  │   │   ├── Functions (UDFs)\n",
+    "  │   │   └── Volumes (dla plików)\n",
+    "```\n",
+    "\n",
+    "Unity Catalog organizuje dane w trzech poziomach: `catalog.schema.table`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -448,7 +492,6 @@
    "outputs": [],
    "source": [
     "# Lista wszystkich katalogów dostępnych dla użytkownika\n",
-    "print(\"=== Dostępne katalogi ===\")\n",
     "catalogs_df = spark.sql(\"SHOW CATALOGS\")\n",
     "display(catalogs_df)"
    ]
@@ -472,7 +515,6 @@
    "outputs": [],
    "source": [
     "# Lista schematów w aktualnym katalogu\n",
-    "print(f\"\\n=== Schematy w katalogu {CATALOG} ===\")\n",
     "schemas_df = spark.sql(f\"SHOW SCHEMAS IN {CATALOG}\")\n",
     "display(schemas_df)"
    ]
@@ -683,10 +725,29 @@
    "outputs": [],
    "source": [
     "# Informacje o Spark Context\n",
-    "print(\"=== Konfiguracja klastra ===\")\n",
-    "print(f\"Spark Version: {spark.version}\")\n",
-    "print(f\"Aplikacja: {spark.sparkContext.appName}\")\n",
-    "print(f\"Master: {spark.sparkContext.master}\")"
+    "spark_version = spark.version\n",
+    "app_name = spark.sparkContext.appName\n",
+    "master = spark.sparkContext.master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Konfiguracja klastra:**\n",
+    "\n",
+    "Podstawowe informacje o środowisku Spark i Databricks Runtime."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Spark Version: {spark_version}\")\n",
+    "print(f\"Aplikacja: {app_name}\")\n",
+    "print(f\"Master: {master}\")"
    ]
   },
   {
@@ -708,8 +769,7 @@
    "outputs": [],
    "source": [
     "# Liczba executorów\n",
-    "num_executors = len(spark.sparkContext._jsc.sc().statusTracker().getExecutorInfos()) \n",
-    "print(f\"Liczba executorów (workers): {num_executors}\")"
+    "num_executors = len(spark.sparkContext._jsc.sc().statusTracker().getExecutorInfos()) "
    ]
   },
   {
@@ -731,8 +791,7 @@
    "outputs": [],
    "source": [
     "# Runtime version\n",
-    "dbr_version = spark.conf.get(\"spark.databricks.clusterUsageTags.sparkVersion\", \"unknown\")\n",
-    "print(f\"Databricks Runtime: {dbr_version}\")"
+    "dbr_version = spark.conf.get(\"spark.databricks.clusterUsageTags.sparkVersion\", \"unknown\")"
    ]
   },
   {
@@ -753,10 +812,8 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "# Photon włączony?\n",
-    "photon_enabled = spark.conf.get(\"spark.databricks.photon.enabled\", \"false\")\n",
-    "print(f\"Photon Engine: {'Włączony' if photon_enabled == 'true' else 'Wyłączony'}\")"
+    "photon_enabled = spark.conf.get(\"spark.databricks.photon.enabled\", \"false\")"
    ]
   },
   {
@@ -1093,6 +1150,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([\n",
+    "    StructField(\"id\", IntegerType(), False),\n",
+    "    StructField(\"name\", StringType(), False),\n",
+    "    StructField(\"department\", StringType(), False),\n",
+    "    StructField(\"salary\", IntegerType(), False)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.createDataFrame(data, schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rejestracja jako temp view dla dostępu z SQL\n",
+    "df.createOrReplaceTempView(\"employees_temp\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Temp view utworzony: employees_temp**\n",
+    "\n",
+    "Temp view pozwala na dostęp do DataFrame z komórek SQL w tym samym notebooku."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -1223,11 +1331,18 @@
    },
    "outputs": [],
    "source": [
-    "# Hive Metastore (2-poziomowy namespace)\n",
-    "print(\"=== Hive Metastore ===\")\n",
-    "print(\"Składnia: database.table\")\n",
-    "print(\"Przykład: default.sales_data\")\n",
-    "print(\"\")"
+    "# Hive Metastore (2-poziomowy namespace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hive Metastore (legacy)**\n",
+    "\n",
+    "- **Składnia**: `database.table`\n",
+    "- **Przykład**: `default.sales_data`\n",
+    "- **Ograniczenia**: Brak fine-grained permissions, brak lineage, workspace isolation"
    ]
   },
   {
@@ -1248,16 +1363,24 @@
    },
    "outputs": [],
    "source": [
-    "# Unity Catalog (3-poziomowy namespace)\n",
-    "print(\"=== Unity Catalog ===\")\n",
-    "print(\"Składnia: catalog.schema.table\")\n",
-    "print(\"Przykład: prod.gold.sales_summary\")\n",
-    "print(\"\")\n",
+    "# Unity Catalog (3-poziomowy namespace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Unity Catalog (nowoczesny)**\n",
     "\n",
-    "print(\"Zalety 3-poziomowego namespace:\")\n",
-    "print(\"- Oddzielenie środowisk (dev/test/prod catalogs)\")\n",
-    "print(\"- Lepsze uprawnienia (grant na poziomie catalogu)\")\n",
-    "print(\"- Współdzielenie metastore między workspace'ami\")"
+    "- **Składnia**: `catalog.schema.table`\n",
+    "- **Przykład**: `prod.gold.sales_summary`\n",
+    "\n",
+    "**Zalety 3-poziomowego namespace:**\n",
+    "- Oddzielenie środowisk (dev/test/prod catalogs)\n",
+    "- Lepsze uprawnienia (grant na poziomie catalogu)\n",
+    "- Współdzielenie metastore między workspace'ami\n",
+    "- End-to-end lineage\n",
+    "- Fine-grained access control"
    ]
   },
   {
@@ -1971,21 +2094,21 @@
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "trainer_bronze",
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
-       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "CATALOG": {
@@ -1997,21 +2120,21 @@
       "label": null,
       "name": "CATALOG",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "training_catalog",
       "label": null,
       "name": "CATALOG",
       "options": {
-       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
