--- a/DZIEN_1_Fundamentals_Exploration/workshops/02_transformations_cleaning_workshop.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/workshops/02_transformations_cleaning_workshop.ipynb
@@ -99,11 +99,22 @@
     "CUSTOMERS_CSV = f\"{DATASET_BASE_PATH}/customers/customers.csv\"\n",
     "ORDERS_JSON = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
     "\n",
-    "print(f\"Katalog: {CATALOG}\")\n",
-    "print(f\"Schema: {BRONZE_SCHEMA}\")\n",
-    "\n",
     "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
     "spark.sql(f\"USE SCHEMA {BRONZE_SCHEMA}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e2f217",
+   "metadata": {},
+   "source": [
+    "**Konfiguracja środowiska wykonana**\n",
+    "\n",
+    "Biblioteki i ścieżki zostały skonfigurowane:\n",
+    "- **Funkcje PySpark**: Transformacje, filtry, agregacje \n",
+    "- **Katalog**: `{CATALOG}`\n",
+    "- **Schema**: `{BRONZE_SCHEMA}` (izolacja per użytkownik)\n",
+    "- **Źródła danych**: customers.csv, orders_batch.json"
    ]
   },
   {
@@ -121,12 +132,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Wczytaj dane\n",
+    "# Wczytaj dane customers\n",
     "customers_df = spark.read.format(\"csv\").option(\"header\", \"true\").option(\"inferSchema\", \"true\").load(CUSTOMERS_CSV)\n",
+    "customers_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ba9d7fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wczytaj dane orders\n",
     "orders_df = spark.read.format(\"json\").option(\"inferSchema\", \"true\").load(ORDERS_JSON)\n",
+    "orders_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d6502de",
+   "metadata": {},
+   "source": [
+    "**Dane wczytane pomyślnie**\n",
     "\n",
-    "print(f\"Customers: {customers_df.count()} rekordów\")\n",
-    "print(f\"Orders: {orders_df.count()} rekordów\")"
+    "Oba datasety zostały wczytane:\n",
+    "- **Customers**: ~10,000 rekordów z pliku CSV\n",
+    "- **Orders**: ~100,000 rekordów z pliku JSON\n",
+    "\n",
+    "**Rzeczywiste kolumny:**\n",
+    "- **Customers**: `customer_id`, `first_name`, `last_name`, `email`, `phone`, `city`, `state`, `country`, `registration_date`, `customer_segment`\n",
+    "- **Orders**: `order_id`, `customer_id`, `product_id`, `store_id`, `order_datetime`, `quantity`, `unit_price`, `discount_percent`, `total_amount`, `payment_method`"
    ]
   },
   {
@@ -159,11 +195,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Dodaj kolumnę email_domain\n",
+    "# Dodaj kolumnę email_domain\n",
     "customers_transformed = customers_df.withColumn(\n",
     "    \"email_domain\",\n",
-    "    F.____(____(____), \"@(.+)$\", 1)  # regexp_extract, col, email\n",
+    "    F.____(____(____), \"@(.+)$\", 1)  # regexp_extract, col, \"email\"\n",
     ")\n",
+    "\n",
+    "display(customers_transformed.select(\"customer_id\", \"email\", \"email_domain\").limit(5))\n",
     "\n",
     "# TODO: Dodaj kolumnę country_code (pierwsze 2 litery, uppercase)\n",
     "customers_transformed = customers_transformed.withColumn(\n",
@@ -186,6 +224,81 @@
     "\n",
     "print(\"=== Przykładowe dane po transformacjach ===\")\n",
     "display(customers_transformed.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26f8d42d",
+   "metadata": {},
+   "source": [
+    "**Transformacja email_domain wykonana**\n",
+    "\n",
+    "Za pomocą `regexp_extract()` wyodrębniamy domenę email po znaku `@`.\n",
+    "- **Regex pattern**: `@(.+)$` - wszystko po `@` do końca stringa\n",
+    "- **Group 1**: Pierwsza grupa w nawiasach `(.+)`\n",
+    "\n",
+    "**Rezultat**: Nowa kolumna `email_domain` z domenami email (gmail.com, interia.pl, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "371da883",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dodaj kolumnę country_code (pierwsze 2 litery, uppercase)\n",
+    "customers_transformed = customers_transformed.withColumn(\n",
+    "    \"country_code\",\n",
+    "    ____(col(\"____\").substr(1, ____))  # upper, \"country\", 2\n",
+    ")\n",
+    "\n",
+    "display(customers_transformed.select(\"customer_id\", \"country\", \"country_code\").limit(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38ad5375",
+   "metadata": {},
+   "source": [
+    "**Transformacja country_code wykonana**\n",
+    "\n",
+    "Tworzenie kodu kraju z pierwszych 2 liter:\n",
+    "- **substr(1, 2)**: Pierwsze 2 znaki z nazwy kraju\n",
+    "- **upper()**: Konwersja na wielkie litery\n",
+    "\n",
+    "**Rezultat**: \"USA\" -> \"US\", \"Poland\" -> \"PO\", \"Germany\" -> \"GE\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb471c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dodaj kolumnę full_name (łącząc imię i nazwisko)\n",
+    "customers_transformed = customers_transformed.withColumn(\n",
+    "    \"full_name\",\n",
+    "    ____(____(col(\"____\") + \" \" + col(\"____\")))  # trim, lower, \"first_name\", \"last_name\"\n",
+    ")\n",
+    "\n",
+    "display(customers_transformed.select(\"customer_id\", \"first_name\", \"last_name\", \"full_name\").limit(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4598fe7f",
+   "metadata": {},
+   "source": [
+    "**Transformacja full_name wykonana**\n",
+    "\n",
+    "Łączenie imienia i nazwiska w jedną kolumnę:\n",
+    "- **Konkatenacja**: `first_name + \" \" + last_name`\n",
+    "- **trim()**: Usuwa zbędne spacje\n",
+    "- **lower()**: Konwersja na małe litery dla spójności\n",
+    "\n",
+    "**Rezultat**: \"Jesse Hoffman\" -> \"jesse hoffman\""
    ]
   },
   {
@@ -217,25 +330,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dodaj kolumnę customer_tier (VIP dla USA, Regular dla reszty)\n",
+    "customers_transformed = customers_transformed.withColumn(\n",
+    "    \"customer_tier\",\n",
+    "    when(col(\"country\") == \"USA\", \"VIP\")  # when, \"USA\"\n",
+    "    .otherwise(\"Regular\")  # \"Regular\"\n",
+    ")\n",
+    "\n",
+    "display(customers_transformed.select(\"customer_id\", \"country\", \"customer_tier\").limit(10))\n",
+    "\n",
     "# TODO: Dodaj kolumnę customer_segment (VIP dla PL/DE, Regular dla reszty)\n",
     "customers_transformed = customers_transformed.withColumn(\n",
     "    \"customer_segment\",\n",
-    "    ____(col(\"country\").isin(\"Poland\", \"____\"), \"VIP\")  # when, Germany\n",
-    "    .otherwise(\"____\")  # Regular\n",
+    "    when(col(\"country\").isin(\"Poland\", \"Germany\"), \"VIP\")  # when, Germany\n",
+    "    .otherwise(\"Regular\")  # Regular\n",
     ")\n",
     "\n",
     "# TODO: Dodaj kolumnę email_valid (True jeśli zawiera @)\n",
     "customers_transformed = customers_transformed.withColumn(\n",
     "    \"email_valid\",\n",
-    "    when(col(\"____\").____(\"@\"), ____)  # email, contains, True\n",
+    "    when(col(\"email\").contains(\"@\"), True)  # email, contains, True\n",
     "    .otherwise(False)\n",
     ")\n",
     "\n",
     "# TODO: Dodaj kolumnę country_region (Europe dla PL/DE/FR, Other dla reszty)\n",
     "customers_transformed = customers_transformed.withColumn(\n",
     "    \"country_region\",\n",
-    "    when(col(\"country\").____(\"Poland\", \"Germany\", \"France\"), \"____\")  # isin, Europe\n",
-    "    .____(\"Other\")  # otherwise\n",
+    "    when(col(\"country\").isin(\"Poland\", \"Germany\", \"France\"), \"Europe\")  # isin, Europe\n",
+    "    .otherwise(\"Other\")  # otherwise\n",
     ")\n",
     "\n",
     "print(\"=== Przykładowe dane z transformacjami warunkowymi ===\")\n",
@@ -244,6 +366,51 @@
     "    .select(\"customer_id\", \"country\", \"customer_segment\", \"email_valid\", \"country_region\")\n",
     "    .limit(10)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac3cbd3f",
+   "metadata": {},
+   "source": [
+    "**Segmentacja klientów customer_tier**\n",
+    "\n",
+    "Logika biznesowa segmentacji:\n",
+    "- **VIP**: Klienci z USA (główny rynek)\n",
+    "- **Regular**: Wszyscy pozostali klienci\n",
+    "\n",
+    "**when().otherwise()**: Struktura warunkowa PySpark podobna do CASE WHEN w SQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "777d7aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dodaj kolumnę email_valid (walidacja obecności @)\n",
+    "customers_transformed = customers_transformed.withColumn(\n",
+    "    \"email_valid\",\n",
+    "    when(col(\"____\").____(\"@\"), ____)  # \"email\", contains, True\n",
+    "    .otherwise(____)  # False\n",
+    ")\n",
+    "\n",
+    "display(customers_transformed.select(\"customer_id\", \"email\", \"email_valid\").limit(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf1c84de",
+   "metadata": {},
+   "source": [
+    "**Walidacja email_valid**\n",
+    "\n",
+    "Prosta walidacja formatu email:\n",
+    "- **True**: Email zawiera znak `@`\n",
+    "- **False**: Brak znaku `@` (nieprawidłowy format)\n",
+    "\n",
+    "**Zastosowanie biznesowe**: Flagowanie niepoprawnych adresów email do ręcznej weryfikacji lub czyszczenia"
    ]
   },
   {
@@ -275,6 +442,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filtruj klientów z USA\n",
+    "usa_customers = customers_transformed.filter(col(\"____\") == \"USA\")  # \"country\"\n",
+    "usa_customers.count()\n",
+    "\n",
     "# TODO: Filtruj klientów z Polski\n",
     "polish_customers = customers_transformed.filter(col(\"____\") == \"Poland\")  # country\n",
     "print(f\"Klienci z Polski: {polish_customers.count()}\")\n",
@@ -292,6 +463,50 @@
     "\n",
     "print(\"\\n=== Top 10 najdroższych zamówień ===\")\n",
     "display(top_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6fd9db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtruj zamówienia o wartości > 500\n",
+    "high_value_orders = orders_df.filter(col(\"____\") > ____)  # \"total_amount\", 500\n",
+    "high_value_orders.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4c788d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top 10 najdroższych zamówień (sortowanie malejące)\n",
+    "top_orders = (\n",
+    "    orders_df\n",
+    "    .orderBy(col(\"total_amount\").____())  # desc\n",
+    "    .limit(____)  # 10\n",
+    ")\n",
+    "\n",
+    "display(top_orders.select(\"order_id\", \"customer_id\", \"total_amount\", \"payment_method\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "841c5220",
+   "metadata": {},
+   "source": [
+    "**Operacje filtrowania i sortowania wykonane**\n",
+    "\n",
+    "Zastosowane filtry:\n",
+    "- **USA customers**: Filtrowanie po kraju równym \"USA\"\n",
+    "- **High-value orders**: Zamówienia > 500 (próg premium)\n",
+    "- **Top 10 orders**: Sortowanie malejące po `total_amount`\n",
+    "\n",
+    "**Metody**: `filter()`, `orderBy()`, `limit()` - podstawowe operacje analityczne w PySpark"
    ]
   },
   {
@@ -323,16 +538,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Policz zamówienia według statusu\n",
-    "orders_by_status = (\n",
+    "# Policz zamówienia według metod płatności\n",
+    "orders_by_payment = (\n",
     "    orders_df\n",
-    "    .groupBy(\"____\")  # status\n",
+    "    .groupBy(\"____\")  # \"payment_method\"\n",
     "    .count()\n",
     "    .orderBy(\"count\", ascending=____)  # False\n",
     ")\n",
     "\n",
-    "print(\"=== Zamówienia według statusu ===\")\n",
-    "display(orders_by_status)"
+    "display(orders_by_payment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e3123eb",
+   "metadata": {},
+   "source": [
+    "**Agregacja według metod płatności**\n",
+    "\n",
+    "Analiza preferencji płatniczych klientów:\n",
+    "- **groupBy(\"payment_method\")**: Grupowanie według sposobu płatności\n",
+    "- **count()**: Liczba zamówień w każdej grupie\n",
+    "- **orderBy(desc)**: Sortowanie od najczęstszej metody\n",
+    "\n",
+    "**Biznesowa wartość**: Identyfikacja popularnych metod płatności dla optymalizacji procesu checkout"
    ]
   },
   {
@@ -342,18 +571,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Całkowita wartość i średnia według statusu\n",
-    "revenue_by_status = (\n",
+    "# Całkowita wartość i średnia według metod płatności\n",
+    "revenue_by_payment = (\n",
     "    orders_df\n",
-    "    .groupBy(\"status\")\n",
+    "    .groupBy(\"payment_method\")\n",
     "    .agg(\n",
     "        F.____(\"total_amount\").alias(\"total_revenue\"),  # sum\n",
     "        F.____(\"total_amount\").alias(\"avg_order_value\")  # avg\n",
     "    )\n",
+    "    .orderBy(\"total_revenue\", ascending=False)\n",
     ")\n",
     "\n",
-    "print(\"=== Revenue według statusu ===\")\n",
-    "display(revenue_by_status)"
+    "display(revenue_by_payment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8bc9349",
+   "metadata": {},
+   "source": [
+    "**Analiza przychodów według metod płatności**\n",
+    "\n",
+    "Zaawansowana agregacja z wieloma miarami:\n",
+    "- **F.sum()**: Całkowity przychód per metoda płatności\n",
+    "- **F.avg()**: Średnia wartość zamówienia (AOV)\n",
+    "- **alias()**: Nadanie czytelnych nazw kolumnom wynikowym\n",
+    "\n",
+    "**Insight**: Która metoda płatności generuje największy przychód?"
    ]
   },
   {
@@ -363,19 +607,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Statystyki per klient\n",
+    "# Statystyki per klient\n",
     "customer_stats = (\n",
     "    orders_df\n",
-    "    .groupBy(\"____\")  # customer_id\n",
+    "    .groupBy(\"____\")  # \"customer_id\"\n",
     "    .agg(\n",
     "        F.____(\"*\").alias(\"total_orders\"),  # count\n",
-    "        F.sum(\"____\").alias(\"total_spent\"),  # total_amount\n",
+    "        F.sum(\"____\").alias(\"total_spent\"),  # \"total_amount\"\n",
     "        F.avg(\"total_amount\").alias(\"avg_order_value\")\n",
     "    )\n",
+    "    .orderBy(\"____\", ascending=False)  # \"total_spent\"\n",
+    "    .limit(10)\n",
     ")\n",
     "\n",
-    "print(\"=== Top 10 klientów według wydatków ===\")\n",
-    "display(customer_stats.orderBy(\"____\", ascending=False).limit(10))  # total_spent"
+    "display(customer_stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "072f959d",
+   "metadata": {},
+   "source": [
+    "**Top 10 klientów - analiza RFM**\n",
+    "\n",
+    "Kluczowe metryki klientów:\n",
+    "- **total_orders**: Frequency - jak często kupuje\n",
+    "- **total_spent**: Monetary - ile wydaje łącznie  \n",
+    "- **avg_order_value**: Średnia wartość koszyka\n",
+    "\n",
+    "**Zastosowanie**: Identyfikacja VIP customers, programy lojalnościowe, personalizacja ofert"
    ]
   },
   {
@@ -406,11 +666,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Utwórz temp views dla SQL queries\n",
+    "# Utwórz temp views dla SQL queries\n",
     "customers_df.____(\"customers\")  # createOrReplaceTempView\n",
-    "orders_df.createOrReplaceTempView(\"____\")  # orders\n",
+    "orders_df.createOrReplaceTempView(\"____\")  # \"orders\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d7a3ef9",
+   "metadata": {},
+   "source": [
+    "**Temporary Views utworzone**\n",
     "\n",
-    "print(\"✓ Temp views utworzone: customers, orders\")"
+    "Views pozwalają na używanie SQL na DataFrames:\n",
+    "- **customers**: DataFrame customers_df jako tabela SQL\n",
+    "- **orders**: DataFrame orders_df jako tabela SQL\n",
+    "\n",
+    "**Zasięg**: Sesja Spark (znikają po restarcie klastra)"
    ]
   },
   {
@@ -420,20 +692,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: SQL query - agregacja zamówień według statusu\n",
+    "# SQL query - agregacja zamówień według metod płatności\n",
     "result = spark.sql(\"\"\"\n",
     "    SELECT \n",
-    "        status,\n",
+    "        payment_method,\n",
     "        ____(*) as order_count,  -- COUNT\n",
     "        ____(total_amount) as total_revenue,  -- SUM\n",
     "        ____(total_amount) as avg_order_value  -- AVG\n",
     "    FROM ____  -- orders\n",
-    "    GROUP BY ____  -- status\n",
+    "    GROUP BY ____  -- payment_method\n",
     "    ORDER BY total_revenue ____  -- DESC\n",
     "\"\"\")\n",
     "\n",
     "print(\"=== Agregacja zamówień (SQL) ===\")\n",
     "display(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c8cd441",
+   "metadata": {},
+   "source": [
+    "**SQL Aggregation - identyczna logika jak PySpark**\n",
+    "\n",
+    "SQL wersja poprzedniej agregacji PySpark:\n",
+    "- **SELECT**: Wybór kolumn i funkcji agregujących\n",
+    "- **GROUP BY**: Grupowanie po payment_method\n",
+    "- **ORDER BY**: Sortowanie wyników\n",
+    "\n",
+    "**Rezultat**: Identyczne wyniki jak `groupBy().agg()` w PySpark"
    ]
   },
   {
@@ -443,23 +730,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: SQL query - JOIN customers i orders\n",
+    "# SQL query - JOIN customers i orders\n",
     "result = spark.sql(\"\"\"\n",
     "    SELECT \n",
     "        c.customer_id,\n",
     "        c.first_name,\n",
+    "        c.last_name,\n",
     "        c.country,\n",
     "        ____(____.order_id) as total_orders,  -- COUNT, o\n",
     "        SUM(o.____) as total_spent  -- total_amount\n",
     "    FROM ____ c  -- customers\n",
     "    ____ JOIN orders o ON c.customer_id = o.customer_id  -- LEFT\n",
-    "    GROUP BY c.customer_id, c.first_name, c.country\n",
+    "    GROUP BY c.customer_id, c.first_name, c.last_name, c.country\n",
     "    ORDER BY ____ DESC  -- total_spent\n",
     "    LIMIT ____  -- 10\n",
     "\"\"\")\n",
     "\n",
-    "print(\"=== Top 10 klientów z zamówieniami (SQL JOIN) ===\")\n",
     "display(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fa05c2",
+   "metadata": {},
+   "source": [
+    "**SQL JOIN - łączenie tabel customers i orders**\n",
+    "\n",
+    "Zaawansowane SQL z JOINem:\n",
+    "- **LEFT JOIN**: Wszyscy klienci + ich zamówienia (jeśli istnieją)\n",
+    "- **GROUP BY**: Agregacja per klient\n",
+    "- **ORDER BY + LIMIT**: Top 10 klientów według wydatków\n",
+    "\n",
+    "**Equivalent PySpark**: `customers_df.join(orders_df, \"customer_id\", \"left\").groupBy(...)`"
    ]
   },
   {
