--- a/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
@@ -204,6 +204,65 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Wyświetl kontekst użytkownika:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Katalog: {CATALOG}\")\n",
+    "print(f\"Schema Bronze: {BRONZE_SCHEMA}\")\n",
+    "print(f\"Schema Silver: {SILVER_SCHEMA}\")\n",
+    "print(f\"Schema Gold: {GOLD_SCHEMA}\")\n",
+    "print(f\"Użytkownik: {raw_user}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ustaw katalogi i schematy jako domyślne:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
+    "spark.sql(f\"USE SCHEMA {BRONZE_SCHEMA}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Definicja tabel do optymalizacji:**\n",
+    "\n",
+    "Założenie: notebook `01_delta_lake_operations.ipynb` został już wykonany."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CUSTOMERS_DELTA = f\"{BRONZE_SCHEMA}.customers_delta\"\n",
+    "ORDERS_DELTA = f\"{BRONZE_SCHEMA}.orders_delta\"\n",
+    "\n",
+    "print(f\"Customers: {CUSTOMERS_DELTA}\")\n",
+    "print(f\"Orders: {ORDERS_DELTA}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -285,13 +344,38 @@
     "    WHERE customer_segment = 'Premium'\n",
     "    ORDER BY customer_id DESC\n",
     "    LIMIT 10\n",
-    "\"\"\")\n",
-    "\n",
-    "# Wyświetl podstawowy plan\n",
-    "simple_query.explain()\n",
-    "\n",
-    "print(\"\\n=== Rozszerzony plan zapytania ===\")\n",
-    "# Wyświetl rozszerzony plan\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Podstawowy plan zapytania:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simple_query.explain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Rozszerzony plan zapytania (z detalami):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "simple_query.explain(True)"
    ]
   },
@@ -354,6 +438,99 @@
     "print(\"- 'PushedFilters' - filtry przepchnięte do poziomu czytania\")\n",
     "print(\"- 'ReadSchema' - tylko wybrane kolumny (column pruning)\")\n",
     "print(\"- 'PartitionFilters' - filtry na partycjach\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**💡 W planie szukaj:**\n",
+    "- `PushedFilters` - filtry przepchnięte do poziomu czytania\n",
+    "- `ReadSchema` - tylko wybrane kolumny (column pruning)  \n",
+    "- `PartitionFilters` - filtry na partycjach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_query.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź plan - predicate pushdown w działaniu:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(f\"DESCRIBE DETAIL {ORDERS_PARTITIONED}\").select(\"name\", \"location\", \"partitionColumns\").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź strukturę partycji:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź plan - partition pruning w działaniu:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_with_partitions.write \\\n",
+    "    .format(\"delta\") \\\n",
+    "    .mode(\"overwrite\") \\\n",
+    "    .partitionBy(\"year\", \"month\") \\\n",
+    "    .saveAsTable(ORDERS_PARTITIONED)\n",
+    "\n",
+    "print(f\"✓ Tabela {ORDERS_PARTITIONED} utworzona z partycjonowaniem według roku i miesiąca\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Zapisz jako tabelę partycjonowaną:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_with_partitions = spark.sql(f\"\"\"\n",
+    "    SELECT \n",
+    "        *,\n",
+    "        YEAR(order_date) as year,\n",
+    "        MONTH(order_date) as month\n",
+    "    FROM {ORDERS_DELTA}\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dodaj kolumny do partycjonowania (rok i miesiąc):**"
    ]
   },
   {
@@ -522,6 +699,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "efficient_query.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Porównanie: zapytanie BEZ partition pruning:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inefficient_query = spark.sql(f\"\"\"\n",
+    "    SELECT order_id, customer_id, total_amount, order_date\n",
+    "    FROM {ORDERS_PARTITIONED}\n",
+    "    WHERE customer_id = 1\n",
+    "\"\"\")\n",
+    "\n",
+    "inefficient_query.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**💡 Porównaj plany:**\n",
+    "- Pierwszy: partition pruning aktywny (`PartitionFilters`)\n",
+    "- Drugi: brak partition pruning - czyta wszystkie partycje"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -626,6 +843,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(5):\n",
+    "    small_batch = spark.range(i*100, (i+1)*100).select(\n",
+    "        col(\"id\"),\n",
+    "        (col(\"id\") * 2).alias(\"value\"),\n",
+    "        lit(f\"batch_{i}\").alias(\"batch_name\")\n",
+    "    )\n",
+    "    \n",
+    "    small_batch.write \\\n",
+    "        .format(\"delta\") \\\n",
+    "        .mode(\"append\") \\\n",
+    "        .saveAsTable(SMALL_FILES_TABLE)\n",
+    "    \n",
+    "    print(f\"✓ Zapisano batch {i}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź liczbę plików:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detail = spark.sql(f\"DESCRIBE DETAIL {SMALL_FILES_TABLE}\").collect()[0]\n",
+    "print(f\"Liczba plików: {detail['numFiles']}\")\n",
+    "print(f\"Rozmiar tabeli: {detail['sizeInBytes']} bytes\")\n",
+    "print(f\"Średni rozmiar pliku: {detail['sizeInBytes'] / detail['numFiles']:.0f} bytes\")\n",
+    "print(\"\\n⚠️  Problem: zbyt wiele małych plików!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Symuluj wiele małych zapisów (każdy tworzy osobny plik):**"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -695,6 +960,100 @@
     "print(\"\\nWłączone właściwości Auto Compaction:\")\n",
     "for prop in auto_props:\n",
     "    print(f\"- {prop['key']}: {prop['value']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "properties = spark.sql(f\"SHOW TBLPROPERTIES {SMALL_FILES_TABLE}\").collect()\n",
+    "auto_props = [p for p in properties if 'autoOptimize' in p['key']]\n",
+    "for prop in auto_props:\n",
+    "    print(f\"- {prop['key']}: {prop['value']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź włączone właściwości Auto Compaction:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(f\"\"\"\n",
+    "    ALTER TABLE {SMALL_FILES_TABLE}\n",
+    "    SET TBLPROPERTIES (\n",
+    "        'delta.autoOptimize.optimizeWrite' = 'true',\n",
+    "        'delta.autoOptimize.autoCompact' = 'true'\n",
+    "    )\n",
+    "\"\"\")\n",
+    "\n",
+    "print(\"✓ Auto Compaction włączony\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**💡 Sprawdź `operationParameters` - powinno zawierać informację o ZORDER**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = spark.sql(f\"DESCRIBE HISTORY {ORDERS_DELTA}\")\n",
+    "optimize_operations = history.filter(col(\"operation\") == \"OPTIMIZE\")\n",
+    "\n",
+    "display(\n",
+    "    optimize_operations.select(\n",
+    "        \"version\", \"timestamp\", \"operation\", \n",
+    "        \"operationParameters\", \"operationMetrics\"\n",
+    "    ).orderBy(\"version\", ascending=False).limit(3)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Historia operacji OPTIMIZE:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Włącz Auto Compaction dla przyszłych zapisów:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detail_after = spark.sql(f\"DESCRIBE DETAIL {SMALL_FILES_TABLE}\").collect()[0]\n",
+    "print(f\"Po OPTIMIZE:\")\n",
+    "print(f\"Liczba plików: {detail_after['numFiles']}\")\n",
+    "print(f\"Rozmiar tabeli: {detail_after['sizeInBytes']} bytes\")\n",
+    "print(f\"Średni rozmiar pliku: {detail_after['sizeInBytes'] / detail_after['numFiles']:.0f} bytes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź stan po OPTIMIZE:**"
    ]
   },
   {
@@ -782,21 +1141,7 @@
     "    ZORDER BY (customer_id, order_date)\n",
     "\"\"\")\n",
     "\n",
-    "print(\"✓ ZORDER BY wykonany na kolumnach: customer_id, order_date\")\n",
-    "\n",
-    "# Sprawdź historię optymalizacji\n",
-    "print(\"\\n=== Historia operacji OPTIMIZE ===\")\n",
-    "history = spark.sql(f\"DESCRIBE HISTORY {ORDERS_DELTA}\")\n",
-    "optimize_operations = history.filter(col(\"operation\") == \"OPTIMIZE\")\n",
-    "\n",
-    "display(\n",
-    "    optimize_operations.select(\n",
-    "        \"version\", \"timestamp\", \"operation\", \n",
-    "        \"operationParameters\", \"operationMetrics\"\n",
-    "    ).orderBy(\"version\", ascending=False).limit(3)\n",
-    ")\n",
-    "\n",
-    "print(\"\\n💡 Sprawdź 'operationParameters' - powinno zawierać informację o ZORDER\")"
+    "print(\"✓ ZORDER BY wykonany na kolumnach: customer_id, order_date\")"
    ]
   },
   {
@@ -866,6 +1211,53 @@
     "print(\"- 'numFilesTotal' vs 'numFilesSelected' - ile plików pominięto\")\n",
     "print(\"- 'metadata time' - czas parsowania metadanych\")\n",
     "print(\"- 'files pruned' - data skipping statistics\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pomiar czasu wykonania:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "result = test_query.collect()\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"Wynik: {result[0]}\")\n",
+    "print(f\"Czas wykonania: {end_time - start_time:.2f} sekund\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Plan zapytania - sprawdź data skipping:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_query.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**💡 W planie szukaj:**\n",
+    "- `numFilesTotal` vs `numFilesSelected` - ile plików pominięto\n",
+    "- `metadata time` - czas parsowania metadanych  \n",
+    "- `files pruned` - data skipping statistics"
    ]
   },
   {
