--- a/DZIEN_2_Lakehouse_Delta_Lake/workshops/02_end_to_end_bronze_silver_gold_workshop.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/workshops/02_end_to_end_bronze_silver_gold_workshop.ipynb
@@ -10,10 +10,18 @@
     "**Cel warsztatu:**\n",
     "- Implementacja kompletnego pipeline'u Bronze → Silver → Gold\n",
     "- Integracja wielu źródeł danych (customers, orders, products)\n",
-    "- Transformacje biznesowe i agregacje\n",
+    "- Transformacje biznesowe i agregacje w architekturze medalionowej\n",
     "- Optymalizacja i monitorowanie pipeline'u\n",
     "\n",
     "**Czas:** 120 minut\n",
+    "\n",
+    "**Architektura docelowa:**\n",
+    "```\n",
+    "Bronze (Raw Data)     Silver (Cleansed)     Gold (Analytics)\n",
+    "├── customers.csv  →  ├── customers_clean → ├── customer_analytics\n",
+    "├── orders.json    →  ├── orders_clean    → ├── product_performance  \n",
+    "└── products.parquet→ └── products_clean  → └── sales_summary\n",
+    "```\n",
     "\n",
     "---"
    ]
@@ -38,6 +46,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "248410bf",
+   "metadata": {},
+   "source": [
+    "**Wyjaśnienie inicjalizacji:**\n",
+    "- Skrypt `00_setup` konfiguruje per-user izolację (katalogi, schematy)\n",
+    "- Automatycznie tworzy zmienne środowiskowe: `CATALOG`, `BRONZE_SCHEMA`, `SILVER_SCHEMA`, `GOLD_SCHEMA`\n",
+    "- Zapewnia, że każdy użytkownik pracuje w izolowanym namespace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a3ff4df3",
    "metadata": {},
    "source": [
@@ -58,6 +77,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.types import *\n",
+    "\n",
+    "# Ścieżki do plików źródłowych w dataset\n",
+    "CUSTOMERS_CSV = f\"{DATASET_BASE_PATH}/customers/customers.csv\"\n",
+    "ORDERS_JSON = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
+    "PRODUCTS_PARQUET = f\"{DATASET_BASE_PATH}/products/products.parquet\"\n",
+    "\n",
     "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "\n",
     "# TODO: Auto Loader dla customers\n",
@@ -74,12 +101,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84d0c56d",
+   "metadata": {},
+   "source": [
+    "**Konfiguracja środowiska:**\n",
+    "- Importujemy funkcje PySpark do transformacji danych\n",
+    "- Definiujemy ścieżki do plików źródłowych w dataset\n",
+    "- Pliki są w różnych formatach: CSV (customers), JSON (orders), Parquet (products)\n",
+    "- Użyjemy rzeczywistych kolumn z dataset'u"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "11824b92",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Krok 1 - Wczytaj customers z CSV\n",
+    "customers_raw = (\n",
+    "    spark.read\n",
+    "    .format(\"____\")  # csv\n",
+    "    .option(\"header\", \"____\")  # true\n",
+    "    .option(\"inferSchema\", \"____\")  # true\n",
+    "    .load(____)  # CUSTOMERS_CSV\n",
+    ")\n",
+    "\n",
     "# TODO: Zapisz do Bronze\n",
     "query_bronze_customers = (\n",
     "    bronze_customers_stream.writeStream\n",
@@ -88,6 +136,76 @@
     "    .option(\"checkpointLocation\", f\"{____}/bronze_customers\")  # CHECKPOINT_PATH\n",
     "    .table(f\"{CATALOG}.{SCHEMA}.bronze_customers_pipeline\")\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "480d830c",
+   "metadata": {},
+   "source": [
+    "**Krok 3: Zapis do Bronze**\n",
+    "- `.format(\"delta\")` - zapisujemy w formacie Delta Lake\n",
+    "- `.mode(\"overwrite\")` - zastępujemy istniejące dane\n",
+    "- `overwriteSchema=\"true\"` - pozwalamy na zmiany w schemacie\n",
+    "- Tabela zostanie utworzona w schemacie Bronze z prefiksem użytkownika"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94e41988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Krok 3 - Zapisz customers do Bronze\n",
+    "(\n",
+    "    customers_bronze\n",
+    "    .write\n",
+    "    .format(\"____\")  # delta\n",
+    "    .mode(\"____\")  # overwrite\n",
+    "    .option(\"overwriteSchema\", \"true\")\n",
+    "    .saveAsTable(f\"{____}.customers_bronze\")  # BRONZE_SCHEMA\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2506bee",
+   "metadata": {},
+   "source": [
+    "**Krok 2: Audit metadata dla Bronze**\n",
+    "- `_bronze_ingest_timestamp` - użyj `current_timestamp()` - kiedy dane zostały załadowane\n",
+    "- `_bronze_source_file` - użyj `input_file_name()` - z jakiego pliku pochodzą dane\n",
+    "- `_bronze_ingested_by` - użyj `raw_user` - kto załadował dane\n",
+    "- Te kolumny pomagają w śledzeniu pochodzenia danych (data lineage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "429968c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Krok 2 - Dodaj audit metadata dla customers\n",
+    "customers_bronze = (\n",
+    "    customers_raw\n",
+    "    .withColumn(\"_bronze_ingest_timestamp\", F.____)  # current_timestamp()\n",
+    "    .withColumn(\"_bronze_source_file\", F.____)  # input_file_name()\n",
+    "    .withColumn(\"_bronze_ingested_by\", F.lit(____))  # raw_user\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25be731c",
+   "metadata": {},
+   "source": [
+    "**Krok 1: Wczytanie customers (CSV)**\n",
+    "- Używamy `.format(\"csv\")` dla plików CSV\n",
+    "- `header=\"true\"` - pierwszy wiersz zawiera nazwy kolumn\n",
+    "- `inferSchema=\"true\"` - automatyczne wykrywanie typów danych\n",
+    "- Kolumny w pliku: `customer_id`, `first_name`, `last_name`, `email`, `phone`, `city`, `state`, `country`, `registration_date`, `customer_segment`"
    ]
   },
   {
@@ -120,7 +238,26 @@
     "    .load(f\"{SOURCE_DATA_PATH}/____\")  # orders_batch.json\n",
     "    .withColumn(\"_source_file\", input_file_name())\n",
     "    .withColumn(\"_ingestion_timestamp\", current_timestamp())\n",
+    ")\n",
+    "\n",
+    "# TODO: Krok 4 - Wczytaj orders z JSON\n",
+    "orders_raw = (\n",
+    "    spark.read\n",
+    "    .format(\"____\")  # json\n",
+    "    .option(\"multiLine\", \"____\")  # false - każda linia to osobny JSON\n",
+    "    .load(____)  # ORDERS_JSON\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45e01088",
+   "metadata": {},
+   "source": [
+    "**Krok 4: Wczytanie orders (JSON)**\n",
+    "- Używamy `.format(\"json\")` dla plików JSON\n",
+    "- `multiLine=\"false\"` - każda linia zawiera osobny obiekt JSON\n",
+    "- Kolumny w orders: `order_id`, `customer_id`, `product_id`, `store_id`, `order_datetime`, `quantity`, `unit_price`, `discount_percent`, `total_amount`, `payment_method`"
    ]
   },
   {
@@ -137,7 +274,55 @@
     "    .outputMode(\"append\")\n",
     "    .option(\"checkpointLocation\", f\"{CHECKPOINT_PATH}/____\")  # bronze_orders\n",
     "    .table(f\"{CATALOG}.{SCHEMA}.bronze_orders_pipeline\")\n",
+    ")\n",
+    "\n",
+    "# TODO: Krok 5 - Dodaj audit metadata dla orders\n",
+    "orders_bronze = (\n",
+    "    orders_raw\n",
+    "    .withColumn(\"_bronze_ingest_timestamp\", F.current_timestamp())\n",
+    "    .withColumn(\"_bronze_source_file\", F.input_file_name())\n",
+    "    .withColumn(\"_bronze_ingested_by\", F.lit(____)  # raw_user\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0015d21",
+   "metadata": {},
+   "source": [
+    "**Krok 6: Zapis orders do Bronze**\n",
+    "- Identyczna procedura jak dla customers\n",
+    "- Uzupełnij `\"delta\"` i `\"overwrite\"` w miejscach z `____`\n",
+    "- Tabela `orders_bronze` zostanie utworzona w schemacie Bronze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4318a7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Krok 6 - Zapisz orders do Bronze\n",
+    "(\n",
+    "    orders_bronze\n",
+    "    .write\n",
+    "    .format(\"____\")  # delta\n",
+    "    .mode(\"____\")  # overwrite\n",
+    "    .option(\"overwriteSchema\", \"true\")\n",
+    "    .saveAsTable(f\"{BRONZE_SCHEMA}.orders_bronze\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d90c2a2b",
+   "metadata": {},
+   "source": [
+    "**Krok 5: Audit metadata dla orders**\n",
+    "- Dodajemy te same kolumny audit co dla customers\n",
+    "- Użyj `raw_user` w miejscu `____` \n",
+    "- To zapewnia spójne śledzenie pochodzenia danych we wszystkich tabelach Bronze"
    ]
   },
   {
@@ -173,7 +358,26 @@
     "    )\n",
     "    USING DELTA\n",
     "    LOCATION '{____}/products_pipeline'  -- BRONZE_PATH\n",
-    "\"\"\")"
+    "\"\"\")\n",
+    "\n",
+    "# TODO: Krok 7 - Wczytaj products z Parquet\n",
+    "products_raw = (\n",
+    "    spark.read\n",
+    "    .format(\"____\")  # parquet\n",
+    "    .load(____)  # PRODUCTS_PARQUET\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbe6bac2",
+   "metadata": {},
+   "source": [
+    "**Krok 7: Wczytanie products (Parquet)**\n",
+    "- Używamy `.format(\"parquet\")` dla plików Parquet\n",
+    "- Parquet automatycznie zawiera schema, więc nie trzeba jej definiować\n",
+    "- Jest to najbardziej efektywny format dla dużych zbiorów danych\n",
+    "- Kolumny w products: `product_id`, `product_name`, `category`, `price`, `stock_quantity`"
    ]
   },
   {
@@ -198,7 +402,25 @@
     "        FROM '{____}/____'  -- SOURCE_DATA_PATH/products.parquet\n",
     "    )\n",
     "    FILEFORMAT = ____  -- PARQUET\n",
-    "\"\"\")"
+    "\"\"\")\n",
+    "\n",
+    "# TODO: Krok 8 - Dodaj audit metadata dla products\n",
+    "products_bronze = (\n",
+    "    products_raw\n",
+    "    .withColumn(\"_bronze_ingest_timestamp\", F.current_timestamp())  # current_timestamp()\n",
+    "    .withColumn(\"_bronze_source_file\", F.input_file_name())  # input_file_name()\n",
+    "    .withColumn(\"_bronze_ingested_by\", F.lit(raw_user))  # raw_user\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de2734dc",
+   "metadata": {},
+   "source": [
+    "**Krok 8: Audit metadata dla products**\n",
+    "- Uzupełnij brakujące funkcje: `current_timestamp()`, `input_file_name()`, `raw_user`\n",
+    "- Spójne kolumny audit we wszystkich tabelach Bronze ułatwiają zarządzanie"
    ]
   },
   {
@@ -215,7 +437,62 @@
     "print(\"=== Bronze Layer Summary ===\")\n",
     "print(f\"Customers: {spark.table(f'{CATALOG}.{SCHEMA}.bronze_customers_pipeline').count()}\")\n",
     "print(f\"Orders: {spark.table(f'{CATALOG}.{SCHEMA}.bronze_orders_pipeline').count()}\")\n",
-    "print(f\"Products: {spark.table(f'{CATALOG}.{SCHEMA}.bronze_products_pipeline').count()}\")"
+    "print(f\"Products: {spark.table(f'{CATALOG}.{SCHEMA}.bronze_products_pipeline').count()}\")\n",
+    "\n",
+    "# TODO: Krok 9 - Zapisz products do Bronze\n",
+    "(\n",
+    "    products_bronze\n",
+    "    .write\n",
+    "    .format(\"delta\")  # delta\n",
+    "    .mode(\"overwrite\")  # overwrite\n",
+    "    .option(\"overwriteSchema\", \"true\")\n",
+    "    .saveAsTable(f\"{BRONZE_SCHEMA}.products_bronze\")  # BRONZE_SCHEMA\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bf0fa7f",
+   "metadata": {},
+   "source": [
+    "**Krok 10: Weryfikacja warstwy Bronze**\n",
+    "- Sprawdzamy czy wszystkie dane zostały poprawnie załadowane\n",
+    "- Uzupełnij nazwy tabel: `customers_bronze`, `orders_bronze`, `products_bronze`\n",
+    "- Liczby rekordów powinny odpowiadać źródłowym plikom\n",
+    "- To checkpoint przed przejściem do warstwy Silver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bdd07e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Krok 10 - Weryfikacja warstwy Bronze\n",
+    "\n",
+    "# Sprawdź liczby rekordów w każdej tabeli\n",
+    "customers_count = spark.table(f\"{BRONZE_SCHEMA}.____\").count()  # customers_bronze\n",
+    "orders_count = spark.table(f\"{BRONZE_SCHEMA}.____\").count()     # orders_bronze  \n",
+    "products_count = spark.table(f\"{BRONZE_SCHEMA}.____\").count()   # products_bronze\n",
+    "\n",
+    "# Wyświetl podsumowanie\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"Customers Bronze\", customers_count),\n",
+    "    (\"Orders Bronze\", orders_count),\n",
+    "    (\"Products Bronze\", products_count)\n",
+    "], [\"Tabela\", \"Liczba_rekordów\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8de8548",
+   "metadata": {},
+   "source": [
+    "**Krok 9: Zapis products do Bronze**\n",
+    "- Ostatni krok w warstwie Bronze\n",
+    "- Uzupełnij `\"delta\"`, `\"overwrite\"` i `BRONZE_SCHEMA`\n",
+    "- Po tym kroku wszystkie surowe dane będą w warstwie Bronze"
    ]
   },
   {
